# workshop-ros2

./: README.md
install/: local_setup.sh  setup.sh
install/formation_saha_barhoum/share/formation_saha_barhoum/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pubsub_demo/include/pubsub_demo/pubsub_demo/msg/: custom_message.h  custom_message.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  (+1 more)
install/pubsub_demo/lib/pubsub_demo/: listener.py
install/pubsub_demo/share/pubsub_demo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pubsub_demo/share/pubsub_demo/cmake/: ament_cmake_export_libraries-extras.cmake  export_pubsub_demo__rosidl_generator_cppExport.cmake  export_pubsub_demo__rosidl_generator_pyExport-noconfig.cmake  export_pubsub_demo__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_pubsub_demo__rosidl_typesupport_fastrtps_cExport.cmake  export_pubsub_demo__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_pubsub_demo__rosidl_typesupport_fastrtps_cppExport.cmake  pubsub_demoConfig.cmake  pubsub_demo__rosidl_typesupport_cppExport-noconfig.cmake  pubsub_demo__rosidl_typesupport_introspection_cExport-noconfig.cmake  pubsub_demo__rosidl_typesupport_introspection_cppExport-noconfig.cmake  pubsub_demo__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/pubsub_demo/share/pubsub_demo/srv/: CustomService.srv
log/: latest_build
src/formation_saha_barhoum/: setup.cfg  setup.py
src/pubsub_demo/: CMakeLists.txt  setup.bak.py  setup.py
src/pubsub_demo/scripts/: client.py  server.py  talker.py
(+19 files in other folders)
